<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        style="@style/FirebaseUI.WrapperStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--
            Since the TextInputLayouts change size based on whether or not an error
            is showing we use a relative layout to position them absolutely
        -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/FirebaseUI.Text.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:transitionGroup="true"
            android:transitionName="email_field"
            app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
            app:hintTextAppearance="@style/FirebaseUI.Text.HintText"
            tools:ignore="UnusedAttribute">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                style="@style/FirebaseUI.EditText.EmailField"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/FirebaseUI.Text.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="112dp"
            app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
            app:hintTextAppearance="@style/FirebaseUI.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                style="@style/FirebaseUI.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/FirebaseUI.Text.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="224dp"
            app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
            app:hintTextAppearance="@style/FirebaseUI.Text.HintText"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/FirebaseUI.EditText.PasswordField"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/create_account_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="336dp"
            style="@style/FirebaseUI.Text.BodyText"/>

        <Button
            style="@style/FlatButton"
            android:layout_below="@id/create_account_text"
            android:id="@+id/button_create"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/next_default"/>

    </RelativeLayout>

</ScrollView>
