...
    <string name="progress_dialog_signing_up">Signing up…</string>
    <plurals name="error_weak_password">
        <item quantity="one">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item>
        <item quantity="other">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item>
    </plurals>
    <string name="email_account_creation_error">Email account registration unsuccessful</string>
    <string name="error_user_collision_email">An account already exists with that email address.</string>
    <string name="error_user_collision_other">An account already exists with the credentials provided.</string>
    <string name="create_account_preamble">"By tapping SAVE you are indicating that you agree to the "</string>
    <string name="terms_of_service">Terms of Service</string>

    <!-- Idp/Email welcome back -->
    <string name="title_welcome_back_idp_prompt">@string/sign_in_default</string>
    <string name="title_welcome_back_password_prompt">@string/sign_in_default</string>
    <string name="welcome_back_idp_header">You already have an account</string>
    <string name="welcome_back_email_header">Welcome back!</string>
    <string name="welcome_back_idp_prompt">
        You\'ve already used <xliff:g id="email_addr" example="jane.doe@example.com">%1$s</xliff:g>.
        Sign in with <xliff:g id="provider_name" example="Google">%2$s</xliff:g> to continue.
    </string>
    <string name="welcome_back_password_prompt_body">
        You\'ve already used <xliff:g id="email_addr" example="jane.doe@example.com">%1$s</xliff:g>
...
