<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
...
        <View
            android:background="@color/black_30percent"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/settingsTextView"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_settings_black_24dp"
            android:drawablePadding="10dp"
            android:background="@drawable/highlight_selector"
            android:textSize="20dp"
...
